fix: :bug: align episode info on the right side of the image

--- a/src/themes/standard/index.scss
+++ b/src/themes/standard/index.scss
@@ -513,6 +513,7 @@
     }
 
     .player-info-wrap {
+      flex: 1;
       width: 100%;
       padding-left: 20px;
       display: flex;
